# vec64

./: .flake8  Makefile  README.md  pyproject.toml  setup.py  vec64.c
.github/workflows/: ci-pipeline.yml
scripts/: pyext-solib-filename
src/: vec64.py
src/vec64/: __init__.py  ctype.py  span.py  split.py  util.py  wrappers.py
tests/: test_base64_symbol_indexes.py  test_ctype_constants.py  test_pair_encode.py  test_range_type_constants.py  test_span_probability.py  test_split.py  test_unvectorize.py  test_vectorize.py
