[project]
name = "vec64"
version = "0.0.1"
authors = [{ name = "Gary Benson", email = "gary@gbenson.net" }]
description = "C extension functions to make DOM tokenizers faster"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/gbenson/vec64"
Source = "https://github.com/gbenson/vec64"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
