[project]
name = "vec64"
version = "0.0.7"
authors = [{ name = "Gary Benson", email = "gary@gbenson.net" }]
description = "C extension functions to make DOM tokenizers faster"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "deprecated",
]

[project.urls]
Homepage = "https://github.com/gbenson/vec64"
Source = "https://github.com/gbenson/vec64"

[project.optional-dependencies]
dev = [
    "flake8",
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:.*base64_symbol_indexes.*:DeprecationWarning",
]
